played with the uri string; removed ssl capability

--- a/views/login.haml
+++ b/views/login.haml
@@ -1,5 +1,5 @@
 %c user login
-%form{:action => "/logining",:method =>"post", :enctype => "application/json"}
+%form{:action => "/logining",:method =>"post"}
   %legend
   //   A simple question
   %p
